package com.quantis.dashboard_gateway.client;

import com.quantis.dashboard_gateway.model.PortfolioData;
import com.quantis.dashboard_gateway.model.TradeRecordData;
import lombok.RequiredArgsConstructor;
import lombok.extern.slf4j.Slf4j;
import net.devh.boot.grpc.client.inject.GrpcClient;
import org.springframework.stereotype.Component;
import reactor.core.publisher.Mono;

import java.math.BigDecimal;
import java.time.Instant;
import java.util.List;
import java.util.UUID;
import java.util.stream.Collectors;

/**
 * gRPC Client for Portfolio Service
 * 
 * Provides high-performance access to portfolio data via gRPC
 * while maintaining low latency for dashboard operations
 */
@Component
@RequiredArgsConstructor
@Slf4j
public class PortfolioClient {

    // @GrpcClient("portfolio-service")
    // private PortfolioServiceGrpc.PortfolioServiceBlockingStub portfolioStub;

    /**
     * Get user's portfolio overview
     */
    public Mono<PortfolioData.Portfolio> getPortfolio(String userId) {
        // TODO: Implement when gRPC classes are generated
        return Mono.just(getDefaultPortfolio(userId));
    }

    /**
     * Get all positions for a user
     */
    public Mono<List<PortfolioData.Position>> getPositions(String userId) {
        // TODO: Implement when gRPC classes are generated
        return Mono.just(List.of());
    }

    /**
     * Get specific position for user and symbol
     */
    public Mono<PortfolioData.Position> getPosition(String userId, String symbol) {
        // TODO: Implement when gRPC classes are generated
        return Mono.just(getDefaultPosition(userId, symbol));
    }

    /**
     * Get cash balance for user
     */
    public Mono<PortfolioData.CashBalance> getCashBalance(String userId) {
        // TODO: Implement when gRPC classes are generated
        return Mono.just(getDefaultCashBalance(userId));
    }

    /**
     * Get trading history for user
     */
    public Mono<List<TradeRecordData.TradeRecord>> getTradingHistory(String userId, int limit, Long startTime, Long endTime) {
        // TODO: Implement when gRPC classes are generated
        return Mono.just(List.of());
    }

    // Helper methods for data conversion
    private PortfolioData.Position convertToPositionData(Object response) { // TODO: Fix when gRPC classes are generated
        // TODO: Implement when gRPC classes are available
        return PortfolioData.Position.builder()
            .userId("unknown")
            .symbol("UNKNOWN")
            .quantity(BigDecimal.ZERO)
            .averagePrice(BigDecimal.ZERO)
            .currentPrice(BigDecimal.ZERO)
            .marketValue(BigDecimal.ZERO)
            .unrealizedPnl(BigDecimal.ZERO)
            .lastUpdated(Instant.now())
            .build();
    }

    private TradeRecordData.TradeRecord convertToTradeRecordData(Object record) { // TODO: Fix when gRPC classes are generated
        // TODO: Implement when gRPC classes are available
        return TradeRecordData.TradeRecord.builder()
            .tradeId(UUID.randomUUID().toString())
            .orderId("unknown")
            .userId("unknown")
            .symbol("UNKNOWN")
            .side("UNKNOWN")
            .quantity(BigDecimal.ZERO)
            .price(BigDecimal.ZERO)
            .totalValue(BigDecimal.ZERO)
            .executedAt(Instant.now())
            .status("UNKNOWN")
            .build();
    }

    // Default data methods for error handling
    private PortfolioData.Portfolio getDefaultPortfolio(String userId) {
        return PortfolioData.Portfolio.builder()
            .userId(userId)
            .totalValue(BigDecimal.ZERO)
            .cashBalance(BigDecimal.ZERO)
            .positionsValue(BigDecimal.ZERO)
            .unrealizedPnl(BigDecimal.ZERO)
            .currency("USD")
            .lastUpdated(Instant.now())
            .build();
    }

    private PortfolioData.Position getDefaultPosition(String userId, String symbol) {
        return PortfolioData.Position.builder()
            .userId(userId)
            .symbol(symbol)
            .quantity(BigDecimal.ZERO)
            .averagePrice(BigDecimal.ZERO)
            .currentPrice(BigDecimal.ZERO)
            .marketValue(BigDecimal.ZERO)
            .unrealizedPnl(BigDecimal.ZERO)
            .lastUpdated(Instant.now())
            .build();
    }

    private PortfolioData.CashBalance getDefaultCashBalance(String userId) {
        return PortfolioData.CashBalance.builder()
            .userId(userId)
            .balance(BigDecimal.ZERO)
            .currency("USD")
            .availableBalance(BigDecimal.ZERO)
            .pendingBalance(BigDecimal.ZERO)
            .lastUpdated(Instant.now())
            .build();
    }
}
